--- a/style.css
+++ b/style.css
@@ -30,18 +30,26 @@
     height: 450px;
     width: 300px;
     background-color: beige;
-    align-items: right;
+    align-items: center;
     justify-content: center;
 }
 #screenBox {
-    height: 150px;
-    width: auto;
+    display: flex;
+    height: 60px;
+    width: 300px;
     background-color: goldenrod;
     margin-bottom:  50px;
+    align-items: center;
+    justify-content: right;
 }
+
+#screen {
+    font-size: 50px;
+}
+
 
 .buttons{
     height: 50px;
     width: 50px;
-    margin: 5px;
+    margin: 2px;
 }
